gccida/g2/notreg_cost
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/notreg_cost/src/cse.c:1264:26: error: must use 'enum' tag to refer to type 'rtx_code'
int  notreg_cost( rtx x, rtx_code outer) 
                         ^
                         enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/notreg_cost/src/cse.c:1271:28: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
&& ( v2.rtwint = ( __int64)x->fld[0], *( _WORD *)v2.rtwint == 61) 
                           ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/notreg_cost/src/cse.c:1272:42: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& ( v4 = *( ( unsigned __int8 *)x + 2), mode_class_0[v4] == MODE_INT) 
                                         ^~~~~~~~~~~~
                                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/notreg_cost/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/notreg_cost/src/cse.c:1273:50: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& ( v5 = *( unsigned __int8 *)( v2.rtwint + 2), mode_class_0[v5] == MODE_INT) 
                                                 ^~~~~~~~~~~~
                                                 mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/notreg_cost/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/notreg_cost/src/obj/cse.o] Error 1
